--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -30,7 +30,7 @@
                 {% else %}
                 <p class="price mt-4">{{ product.retail_price }}€</p>
                 {% endif %}
-                <div class="d-flex">
+                <div class="d-flex align-items-center">
                     <a href="#" class="btn btn-shop-now bg-orange btn-shop-lg justify-content-end"><i
                             class="fa-solid fa-cart-shopping"></i> Add to
                         Cart</a>
