--- a/products/static/products/css/products.css
+++ b/products/static/products/css/products.css
@@ -102,3 +102,19 @@
     font-weight: bold;
     transition: all 500ms;
 }
+
+.accordion-body table {
+    width: fit-content;
+}
+
+.accordion-button:not(.collapsed) {
+    color: #000;
+    background-color: #dfdfdf;
+    box-shadow: inset 0 -1px 0 rgb(0 0 0 / 13%);
+    border: #000 .6px solid;
+}
+
+.accordion-button:not(.collapsed)::after {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23212529'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+    transform: rotate(-180deg);
+}
