feat: Create bag app, create view and wire it up in urls

--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -134,7 +134,7 @@
             </div>
             <ul class="navbar-nav d-flex flex-row user-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">
+                    <a class="nav-link" href="{% url 'view_bag' %}">
                         <i class="fa-solid fa-bag-shopping fs-4 position-relative mx-2">
                             <span
                                 class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-orange">
