feat: Add shipping terms to settings and add free shipping to homepage

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -17,7 +17,7 @@
     <!-- Reasons Why Banner -->
     <div class="reasons-why-banner d-flex justify-content-center align-items-center upper bg-orange">
         <p class="mx-3 mb-0">
-            <i class="bi bi-truck"></i> Free Shipping Over 1.000€
+            <i class="bi bi-truck"></i> Free Shipping Over {{ free_delivery_threshold }}€
         </p>
         <p class="mx-3 mb-0">
             <i class="bi bi-box-seam"></i> Free Return Shipment
