--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -31,13 +31,32 @@
                 {% else %}
                 <p class="price mt-4">{{ product.retail_price|intcomma }}€</p>
                 {% endif %}
+                <hr class="devider-pdp">
                 <div class="d-flex align-items-center">
-                    <a href="#" class="btn btn-shop-now bg-orange btn-shop-lg justify-content-end"><i
-                            class="fa-solid fa-cart-shopping"></i> Add to
-                        Cart</a>
-                    <a class="add-wishlist-pdp ms-3" href="#">
-                        <i class="fa-regular fa-heart fa-sm"></i>
-                    </a>
+                    <form class="form" action="" method="POST">
+                        {% csrf_token %}
+                        <div class="form-row">
+                            <div class="col-12">
+                                <div class="form-group w-50">
+                                    <div class="input-group mb-3">
+                                        <input class="form-control qty_input" type="number" name="quantity" value="1"
+                                            min="1" max="99" data-item_id="{{ product.id }}"
+                                            id="id_qty_{{ product.id }}" required>
+                                        <label for="id_qty_{{ product.id }}" class="qty-label">Quantity:</label>
+                                    </div>
+                                </div>
+                                <div class="d-flex align-items-center">
+                                    <button type="submit"
+                                        class="btn btn-shop-now bg-orange btn-shop-lg justify-content-end">
+                                        <i class="fa-solid fa-cart-shopping"></i> Add to Bag
+                                    </button>
+                                    <a class="add-wishlist-pdp ms-3" href="#">
+                                        <i class="fa-regular fa-heart fa-sm"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
                 </div>
             </div>
             <div class="accordion my-5" id="accordionDetail">
