--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -33,7 +33,7 @@
                 {% endif %}
                 <hr class="devider-pdp">
                 <div class="d-flex align-items-center">
-                    <form class="form" action="" method="POST">
+                    <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
                         {% csrf_token %}
                         <div class="form-row">
                             <div class="col-12">
@@ -46,6 +46,7 @@
                                     </div>
                                 </div>
                                 <div class="d-flex align-items-center">
+                                    <input type="hidden" name="redirect_url" value="{{ request.path }}">
                                     <button type="submit"
                                         class="btn btn-shop-now bg-orange btn-shop-lg justify-content-end">
                                         <i class="fa-solid fa-cart-shopping"></i> Add to Bag
