feat: Add product count to bag icon in navbar

--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -138,7 +138,7 @@
                         <i class="fa-solid fa-bag-shopping fs-4 position-relative mx-2">
                             <span
                                 class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-orange">
-                                1
+                                {{ product_count }}
                                 <span class="visually-hidden">Items in bag</span>
                             </span>
                         </i>
