--- a/products/static/products/css/products.css
+++ b/products/static/products/css/products.css
@@ -146,10 +146,21 @@
 .qty_input:focus+.qty-label,
 .qty_input:not(:placeholder-shown)+.qty-label {
     top: -10px;
-    left: 6px;
+    left: 50px;
     font-size: .9rem;
     color: #000;
     background-color: white;
     letter-spacing: .5px;
     border-top-right-radius: 3px;
+}
+
+.input-group>.form-control {
+    flex: none;
+    width: 95px;
+
+}
+
+.input-group-prepend button,
+.input-group-append button {
+    border-radius: 50%;
 }
