--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -37,12 +37,28 @@
                         {% csrf_token %}
                         <div class="form-row">
                             <div class="col-12">
-                                <div class="form-group w-50">
-                                    <div class="input-group mb-3">
+                                <div class="form-group">
+                                    <div class="input-group mb-3 d-flex align-items-center">
+                                        <div class="input-group-prepend pe-2">
+                                            <button class="decrement-qty btn btn-black btn-outline-dark btn-sm"
+                                                data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
+                                                <span class="icon">
+                                                    <i class="fas fa-minus"></i>
+                                                </span>
+                                            </button>
+                                        </div>
                                         <input class="form-control qty_input" type="number" name="quantity" value="1"
                                             min="1" max="99" data-item_id="{{ product.id }}"
                                             id="id_qty_{{ product.id }}" required>
-                                        <label for="id_qty_{{ product.id }}" class="qty-label">Quantity:</label>
+                                        <label for="id_qty_{{ product.id }}" class="qty-label px-1">Quantity:</label>
+                                        <div class="input-group-append ps-2">
+                                            <button class="increment-qty btn btn-black btn-outline-dark btn-sm"
+                                                data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
+                                                <span class="icon">
+                                                    <i class="fas fa-plus"></i>
+                                                </span>
+                                            </button>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="d-flex align-items-center">
