--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -148,3 +148,7 @@
     }
 </script>
 {% endblock %}
+{% block postloadjs %}
+{{ block.super }}
+{% include 'products/components/quantity_input_script.html' %}
+{% endblock %}
