feat: Add functionallity to add qty 1 to bag from CLP

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -78,8 +78,7 @@
                             <p class="price">{{ product.retail_price|intcomma }}€</p>
                             {% endif %}
                             <div class="d-flex">
-                                <a href="#" class="btn btn-shop-now bg-orange justify-content-end">Add to
-                                    Cart</a>
+                                {% include 'products/components/add_to_cart_qty_1.html' %}
                                 <a class="add-wishlist" href="#">
                                     <i class="fa-regular fa-heart fa-sm"></i>
                                 </a>
