--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -102,7 +102,7 @@
                                     </li>
                                     <li class="mx-sm-0 mx-md-3 mx-lg-5 my-sm-1 my-md-3">
                                         <a class="dropdown-item d-flex flex-column"
-                                            href="{% url 'products' %}?brand=Specialied">
+                                            href="{% url 'products' %}?brand=Specialized">
                                             <p>Specialized</p>
                                             <img src="{{ MEDIA_URL }}/media/homepage-images/specialized.png"
                                                 alt="Specialized Logo" class="dropdown-img-brand">
